tests/baselines/reference/privateNameMethodCallExpression.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameMethodCallExpression.ts(8,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'AA'.


==== tests/cases/conformance/classes/members/privateNames/privateNameMethodCallExpression.ts (1 errors) ====
    class AA {
        #method() { this.x = 10; };
        #method2(a, ...b) {};
        x = 1;
        test() {
            this.#method();
            const func = this.#method;
            func();
            ~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'AA'.
            new this.#method();
    
            const arr = [ 1, 2 ];
            this.#method2(0, ...arr, 3);
    
            const b = new this.#method2(0, ...arr, 3); //Error 
            const str = this.#method2`head${1}middle${2}tail`;
            this.getInstance().#method2`test${1}and${2}`;
    
            this.getInstance().#method2(0, ...arr, 3); 
            const b2 = new (this.getInstance().#method2)(0, ...arr, 3); //Error 
            const str2 = this.getInstance().#method2`head${1}middle${2}tail`;
        }
        getInstance() { return new AA(); }
    }
    